--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.port=8888
 # Bu URI: Config Server'ın konfigürasyonlaırını çekmek için bağlanacağı git deposunu tanımlar.
 # Eğer bu URL private ise Personel Access Token eklememiz gerekiyor.
 # spring.cloud.config.server.git.uri=https://github.com/username/repo-name
-spring.cloud.config.server.git.uri=
+spring.cloud.config.server.git.uri=https://github.com/safayilmaz56/offline_microservice_config_server
 
 # Config Server'ın git dalından konfigürasyonu çekeceği branchtir. Default: main
 # Eğer branch adı developer, master, production vs olursa main ile değiştirilmelidir.
